IS-76 Work-around for OpenSAML bug (#77)
* IS-76 Bumped dependencies and cleaned up code
* IS-76 Work-around for OpenSAML bug

XMLObjectSupport.cloneXMLObject fails for an EntityDescriptor containing AD-specific RoleDescriptors. We solved this by only saving SSO descriptors.